<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="helmet_setting_bluetooth_client_name">Client</string>
    <string name="helmet_setting_bluetooth_service_name">Service</string>
    <string name="app_name">BluetoothLeDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="system_text_sending">Sending</string>
    <string name="system_text_receiving">Receiving</string>
    <string name="system_text_start_scan">Start scanning</string>
    <string name="system_text_stop_scan">Stop scanning</string>
    <string name="system_text_send">Send an ad</string>
    <string name="system_text_stop_send">Stop an ad</string>
    <string name="system_text_blue_no_support">Your device does not support Bluetooth</string>
    <string name="system_text_blue_le_no_support">Your Bluetooth device does not support low power operation</string>
    <string name="system_text_blue_peripheral_no_support">Your Bluetooth device does not support the perimeter ad feature</string>
    <string name="system_text_openblue_dialog_message">Is it allowed to turn on Bluetooth?</string>
    <string name="system_text_status">Unknown state</string>
    <string name="system_text_send_success">Sent successfully</string>
    <string name="system_text_disconnection">Disconnect</string>
    <!-- adv error -->
    <string name="system_text_adv_error_one">Ad data is larger than 31 bytes</string>
    <string name="system_text_adv_error_two">No ad instances available</string>
    <string name="system_text_adv_error_three">The ad has started, so the ad can’t be served again</string>
    <string name="system_text_adv_error_four">Operation failed due to internal error</string>
    <string name="system_text_adv_error_five">This feature is not supported on this platform</string>
    <string name="system_text_connect_success">Connection succeeded</string>
    <string name="system_text_connect_failed">Connection failed</string>
    <string name="system_text_send_data">Send Content</string>
    <string name="system_text_send_edit_hint">Please enter the content to send</string>
    <!-- blue type -->
    <string name="le_blue_device">LE</string>
    <string name="double_blue_device">BR/EDR/LE</string>
    <string name="br_edr_blue_device">BR/EDR</string>
    <string name="unknown_blue_device">UNKNOWN</string>
    <!-- scan error -->
    <string name="system_text_scan_error_one">No need to scan again while scanning</string>
    <string name="system_text_scan_error_two">Unable to start scanning because I can not register</string>
    <string name="system_text_scan_error_three">Fails to start scan due an internal error</string>
    <string name="system_text_scan_error_four">Low power scan function is not supported</string>
    <string name="system_text_scan_error_five">Fails to start scan as it is out of hardware resources</string>
    <string name="system_text_devie_scan">Bluetooth Scan</string>
    <!-- send server -->
    <string name="system_text_send_server_btn">Send Data</string>
    <string name="glass_default_configation">Sorry, this feature is not supported on your phone</string>
    <string name="glass_default_note">Note</string>
    <string name="glass_open_noti_permission_contents">Please go to the notification usage permission and check it, otherwise the helmet side can not receive the mobile phone notification message effectively.</string>

    <string name="helmet_text_bluetooth_is_no_open">BT Adapter is not turned ON!</string>
</resources>